[package]
name = "asphyxia-rsdvx"
authors = ["RinChanNOW <https://github.com/RinChanNOWWW>"]
description = "asphyxia-rsdvx is a command-line tool to get asphyxia@sdvx gaming data."
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.129", features = ["derive"]}
serde_json = "1.0.66"
clap = "=3.0.0-beta.2"
failure = "0.1.8"
rustyline = "9.0.0"
prettytable-rs = "0.8.0"