[package]
authors = ["RinChanNOW <https://github.com/RinChanNOWWW>"]
description = "ruborute is a command-line tool to get asphyxia@sdvx gaming data."
edition = "2018"
name = "ruborute"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
derive-getters = "0.2.0"
failure = "0.1.8"
prettytable-rs = "0.8.0"
quick-xml = {version = "0.22.0", features = ["encoding", "serialize"]}
rust-fuzzy-search = "0.1.1"
rustyline = "9.0.0"
serde = {version = "1.0.129", features = ["derive"]}
serde_json = "1.0.66"
